deploy/k8s/products-service/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-service-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 8080
